--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtsvg-opensource-src (5.15.7-1+dde) unstable; urgency=medium
+
+  * New upstream release (5.15.7).
+
+ -- Duan Ting <duanting@uniontech.com>  Mon, 14 Nov 2022 17:00:12 +0800
+
 qtsvg-opensource-src (5.15.3-1+dde) stable; urgency=medium
 
   * ['Rebuild  against by  current gcc 11.2']
